# toy-blockchain

./: .gitignore  Cargo.toml  README.md
src/: blockchain.rs  main.rs  utils.rs
