[package]
name = "b"
version = "0.1.0"
authors = ["Jeremie Bonsant <jeremie@bonsant.ca>"]
edition = "2021"

[dependencies]
structopt = { version = "0.3", default-features = false }
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
unixstring = { version ="0.2.7" }
bytes = { version = "1.2.1" }
strfmt = { version = "0.2.2" }